--- a/Test/app/src/main/AndroidManifest.xml
+++ b/Test/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:icon="@mipmap/logo"
         android:roundIcon="@mipmap/logo"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.imgFullScreen"
        >
         <activity android:name=".MainActivity">
             <intent-filter>
